@@ -1,3 +1,4 @@
+1/28/14 factor out duplication in CustomGraphNode and SolutionsGraphNode
 # 1.0.0-dev.9 1/23/14
 1/27/14 linear graph: add 'off scale' label in arrow
 1/27/14 linear graph: position indicators correctly
